@@ -8,6 +8,11 @@
 	  src/*/main.c,
 	  src/z80/gen.c:
 	  Implement declaration of preserved registers, RFE #483.
+	* src/z80/peep.c
+	  Handle preserved register information in peephole optimization.
+	* device/include/stdlib.h,
+	  device/include/string.h:
+	  Preserved register information on standard functions.
 
 2016-01-20 Philipp Klaus Krause <pkk AT spth.de>
 
